--- a/style.css
+++ b/style.css
@@ -78,6 +78,9 @@ table {
 .active {
     visibility: visible;
 }
+.hide {
+    visibility: hidden;
+}
 input {
     width: 500px;
     height: 40px;
