--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
 #searchDiv {
     display: flex;
     flex-direction: row-reverse;
+    width: 100%;
 }
 #searchLogo {
     margin-left: 15px;
@@ -72,7 +73,7 @@ table {
     visibility: hidden;
 }
 input {
-    width: 500px;
+    width: 100%;
     height: 40px;
     border-radius: 20px;
     font-size: large;
