--- a/style.css
+++ b/style.css
@@ -6,23 +6,27 @@ body {
     flex-direction: column;
     background-image: url("./res/bg.webp");
 }
-.memePage1{
+
+.memePage1 {
     padding: 10px;
     display: flex;
     flex-direction: column;
 }
+
 #searchDiv {
     max-width: 600px;
     display: flex;
     flex-direction: row-reverse;
     width: 100%;
 }
+
 #searchLogo {
     margin-left: 15px;
     width: 35px;
     height: 35px;
     cursor: pointer;
 }
+
 .movieInfo {
     visibility: hidden;
     width: 90%;
@@ -32,47 +36,56 @@ body {
     border-radius: 20px;
     font-size: 18px;
 }
-.boxOffice{
+
+.boxOffice {
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
     color: #212529;
 }
-th, td {
+
+th,
+td {
     font-weight: unset;
     padding-right: 10px;
     line-height: 1.4;
     font-family: Lato-Bold;
 }
+
 th {
-  
     font-size: 18px;
-    color: #fff;  
+    color: #fff;
     background-color: #6c7ae0;
 }
-td{
-    
-     font-size: 15px;
+
+td {
+    font-size: 15px;
     color: gray;
 }
+
 tr {
     display: table-row;
     vertical-align: inherit;
     border-color: inherit;
 }
+
 table {
     border-collapse: collapse;
     border-spacing: 2px;
 }
+
 .error {
     visibility: hidden;
 }
+
 .active {
     visibility: visible;
 }
+
 .hide {
     visibility: hidden;
 }
+
 input {
     width: 100%;
     height: 40px;
@@ -84,33 +97,35 @@ input {
     border: solid rgb(168, 168, 168) 1px;
     background-color: rgb(245, 245, 245);
 }
+
 button {
     width: 100px;
     height: 40px;
     border-radius: 30px;
     font-size: large;
 }
-.topRank,.topRelease, td{
+
+.topRank,
+.topRelease,
+td {
     width: 46px;
     height: 29px;
     min-width: 46px;
     min-height: 29px;
 }
-.contentSize,.topRelease{
+
+.contentSize,
+.topRelease {
     width: 250;
     padding-left: 40px;
 }
-.Topcontent1{
-    font-size: 18px;
-    text-align: center;
-background-color: beige;
-}
-.Topcontent2{
-    font-size: 18px;
-    text-align: center;
-    background-color: skyblue;
 
+.topContent {
+    font-size: 18px;
+    text-align: center;
+    background-color: beige;
 }
-.tophead{
+
+.tophead {
     text-align: center;
 }
